[package]
name = "cargo-info"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2018"
license = "MIT"
keywords = ["cargo"]
categories = ["development-tools::cargo-plugins"]

[dependencies]
ansi_term = "0.12"
cargo_metadata = "0.12"
structopt = "0.3"
tabwriter = "1.2"
thiserror = "1.0"
wildmatch = "1.0"
