[package]
name = "cargo-brief"
version = "0.1.0"
description = "Display a brief summary of cargo dependencies"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2021"
license = "MIT"
keywords = ["cargo"]
categories = ["development-tools::cargo-plugins"]
repository = "https://github.com/sanpii/cargo-brief"

[dependencies]
ansi_term = "0.12"
cargo_metadata = "0.14"
structopt = "0.3"
tabwriter = "1.2"
thiserror = "1.0"
wildmatch = "2.0"
