[package]
name = "cargo-brief"
version = "0.2.0"
description = "Display a brief summary of cargo dependencies"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2021"
license = "MIT"
keywords = ["cargo"]
categories = ["development-tools::cargo-plugins"]
repository = "https://github.com/sanpii/cargo-brief"

[dependencies]
nu-ansi-term = "0.47"
cargo_metadata = "0.15"
tabwriter = "1.2"
thiserror = "1.0"
wildmatch = "2.0"

[dependencies.clap]
version = "4.0"
features = ["derive"]
